--- a/package.json
+++ b/package.json
@@ -4,19 +4,12 @@
   "description": "WebSocket server for Vercel",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js" // You can use the same start script for development
+    "start": "node index.js"
   },
-  "keywords": [
-    "websocket",
-    "vercel"
-  ],
-  "author": "NOONE",
-  "license": "MIT",
   "dependencies": {
     "ws": "^8.17.1"
   },
   "engines": {
-    "node": ">=14.0.0" // Specify the minimum Node.js version required by Vercel
+    "node": ">=14.0.0"
   }
 }
