--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "api/ws.js", "use": "@vercel/node" }
-  ],
   "routes": [
-    { "src": "/ws", "dest": "api/ws.js" }
+    { "src": "/ws", "dest": "/api/ws.js" }
   ]
 }
