--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
+  "public": "public",
   "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" }
+    { "src": "api/chat.js",  "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1.js" }
+    { "src": "/api/chat", "dest": "/api/chat.js" }
   ]
 }
