--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,10 @@
   "version": 2,
   "public": "public",
   "builds": [
-    { "src": "api/chat.js",  "use": "@vercel/node" }
+    { "src": "api/*.js", "use": "@vercel/node" },
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/chat", "dest": "/api/chat.js" }
+    { "src": "/api/(.*)", "dest": "/api/$1.js" }
   ]
 }
